--- a/style.css
+++ b/style.css
@@ -1,3 +1,12 @@
+.text-red{
+    color: red;
+}
 .size{
-    font-size: 30px;
+    font-size: 25px;
+}
+.family{
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+.style{
+    font-style: oblique;
 }
