--- a/style.css
+++ b/style.css
@@ -1,12 +1,3 @@
-.text-red{
-    color: red;
-}
-.size{
-    font-size: 25px;
-}
-.family{
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-}
-.style{
-    font-style: oblique;
+*{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
