--- a/style.css
+++ b/style.css
@@ -1,21 +1,54 @@
-.first {
-    border: 5px solid red;
-    background-color: aqua;
-    height: 50px;
-    width: 250px;
-    display: inline;
+* {
+    box-sizing: border-box;
 }
-.second {
-    border: 5px solid red;
-    background-color: aqua;
-    height: 50px;
-    width: 250px;
-    display: inline-block;
+body {
+    margin: 0px;
 }
-.third {
-    border: 5px solid red;
-    background-color: aqua;
-    height: 50px;
-    width: 250px;
+.header {
+    background-color: #F1F1F1;
+    padding: 20px;
+    text-align: center;
+}
+.topnav {
+    overflow: hidden;
+    background-color: #333;
+}
+.topnav a {
+    float: left;
     display: block;
+    color: #F2F2F2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+.topnav a:hover {
+    background-color: #ddd;
+    color: black;
+}
+.column {
+    float: left;
+    padding: 10px;
+    
+}
+.column.side {
+    width: 25%;
+}
+.column.middle {
+    width: 50%;
+}
+.row::after {
+    content: "";
+    display: table;
+    clear: both;
+}
+/* Responsive layout - makes the three columns stack on top of each other instead of next to each other */
+@media screen and (max-width:600px) {
+    .column {
+        width: 100%;
+    }
+}
+.footer {
+    background-color: #e1e1e1;
+    padding: 10px;
+    text-align: center;
 }
