--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
-.img {
-    float: right;
+* {
+    padding: 0px;
+    margin: 0px;
 }
-.clear {
-    clear:both;
+.container {
+    column-count: 3;
 }
