feat: add sticky

--- a/style.css
+++ b/style.css
@@ -1,7 +1,16 @@
-* {
-    padding: 0px;
-    margin: 0px;
+body {
+    height: 5000px;
 }
-.container {
-    column-count: 3;
+.topnav {
+    top: 0px;
+    background-color: aqua;
+    position:sticky;
+    
+}
+.topnav a {
+    display: block;
+    color: blue;
+    text-align: center;
+    padding: 15px;
+    text-decoration: none;
 }
