--- a/style.css
+++ b/style.css
@@ -1,8 +1,14 @@
-footer {
-    background-color: black;
-    color: white;
-    text-align: center;
-    position: fixed;
+body {
+    height: 5000px;
+}
+
+.div1 {
+    position:absolute;
     bottom: 0px;
-    width: 100%;
+    right: 0px;
+    border: 10px solid green;
+    margin: 10px;
+    padding: 10px;
+    width: 100px;
+    text-align: center;
 }
