--- a/style.css
+++ b/style.css
@@ -1,14 +1,9 @@
-body {
-    height: 5000px;
-}
 
 .div1 {
-    position:absolute;
-    bottom: 0px;
-    right: 0px;
-    border: 10px solid green;
-    margin: 10px;
-    padding: 10px;
-    width: 100px;
+    border: 5px solid red;
+    padding: 20px;
+    margin: 20px;
     text-align: center;
+    width: 5%;
+    height: 20%;
 }
