--- a/style.css
+++ b/style.css
@@ -3,7 +3,6 @@
     border: 5px solid red;
     padding: 20px;
     margin: 20px;
-    text-align: center;
-    width: 5%;
-    height: 20%;
+    width: 100px;
+    height: 70px;
 }
