feat: add variable spacing

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 :root {
-    --coloreprincipale: red;
+    --spacing: 15px;
 }
-* {
-    color:var(--coloreprincipale);
+h1 {
+    padding: var(--spacing);
 }
