--- a/style.css
+++ b/style.css
@@ -1,6 +1,36 @@
-:root {
-    --spacing: 15px;
+.card {
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    width: 40%;
 }
-h1 {
-    padding: var(--spacing);
+
+.card:hover {
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+
+.container { 
+    padding: 2px 16px;
+}
+.image-container {
+    position: relative;
+    display: inline-block;
+}
+.image-container img {
+    display: block;
+    width: 100%;
+}
+.close-btn {
+    position: absolute;
+    top: 5px;
+    right: 5px;
+    background-color: rgba(0,0,0,0.5);
+    color: white;
+    font-size: 20px;
+    font-weight: bold;
+    padding: 5px;
+    border-radius: 30%;
+    cursor: pointer;
+}
+.close-btn:hover {
+    background-color: rgba(0, 0, 0, 0.7)
 }
