--- a/style.css
+++ b/style.css
@@ -1,6 +1,12 @@
-.container > p {
-    border: 5px solid goldenrod;
-    display: inline-block;
-    height: 300px;
-    width: 200px;
+.container {
+    display: flex;
+    background-color: goldenrod;
+}
+.container > div {
+    background-color: #f1f1f1;
+    margin: 10px;
+    width: 100px;
+    font-size: 30px;
+    text-align: center;
+    line-height: 75px;
 }
