--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 .container {
     display: flex;
     background-color: goldenrod;
+    flex-direction: column;
 }
 .container > div {
     background-color: #f1f1f1;
