--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
 .container {
     display: flex;
     background-color: goldenrod;
-    flex-direction: column-reverse;
+    flex-direction: row;
+    flex-wrap: wrap;
 }
 .container > div {
     background-color: #f1f1f1;
