--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
     flex-direction: row;
     flex-wrap: wrap;
     height: 300px;
-    align-items: center;
+    justify-content: center;
 }
 .container > div {
     background-color: #f1f1f1;
