--- a/style.css
+++ b/style.css
@@ -4,7 +4,6 @@
     flex-direction: row;
     flex-wrap: wrap;
     height: 300px;
-    justify-content: center;
 }
 .container > div {
     background-color: #f1f1f1;
@@ -13,4 +12,7 @@
     font-size: 30px;
     text-align: center;
     line-height: 75px;
+}
+.item3 {
+    flex-grow: 2;
 }
