feat: add flex-shrink

--- a/style.css
+++ b/style.css
@@ -2,17 +2,16 @@
     display: flex;
     background-color: goldenrod;
     flex-direction: row;
-    flex-wrap: wrap;
-    height: 300px;
+    height: 100px;
 }
 .container > div {
     background-color: #f1f1f1;
     margin: 10px;
-    width: 100px;
+    width: 200px;
     font-size: 30px;
     text-align: center;
     line-height: 75px;
 }
-.item3 {
-    flex-grow: 2;
+.item1 {
+    flex-shrink: 2;
 }
