--- a/style.css
+++ b/style.css
@@ -7,11 +7,11 @@
 .container > div {
     background-color: #f1f1f1;
     margin: 10px;
-    width: 200px;
+    width: 100px;
     font-size: 30px;
     text-align: center;
     line-height: 75px;
 }
-.item1 {
-    flex-shrink: 2;
+.item2 {
+    flex-basis: 175px;
 }
