--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
     display: flex;
     background-color: goldenrod;
     flex-direction: row;
-    height: 100px;
+    height: 400px;
 }
 .container > div {
     background-color: #f1f1f1;
@@ -13,5 +13,8 @@
     line-height: 75px;
 }
 .item2 {
-    flex-basis: 175px;
+    align-self: center;
+}
+.item3 {
+    align-self: flex-end;
 }
