--- a/style.css
+++ b/style.css
@@ -2,12 +2,13 @@
     display: inline-grid;
     background-color: green;
     padding: 20px;
-    grid-template-columns: auto auto auto;
+    grid-template-columns: auto auto auto auto auto;
+    grid-template-rows: auto auto;
 }
 .grid-container > div {
     background-color: #f1f1f1;
     width: 100px;
-    margin: 10px;
+    margin: 5px;
     text-align: center;
     line-height: 75px;
     font-size: 30px;
