--- a/style.css
+++ b/style.css
@@ -1,15 +1,18 @@
 .grid-container {
-    display: inline-grid;
+    display: grid;
     background-color: green;
     padding: 20px;
-    grid-template-columns: auto auto auto auto auto;
-    grid-template-rows: auto auto;
+    grid-template-columns: repeat(5, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    gap: 10px; 
 }
 .grid-container > div {
     background-color: #f1f1f1;
-    width: 100px;
-    margin: 5px;
     text-align: center;
     line-height: 75px;
     font-size: 30px;
 }
+.union {
+    grid-column: span 2;
+}
+
