--- a/style.css
+++ b/style.css
@@ -2,16 +2,15 @@
     display: grid;
     background-color: green;
     padding: 20px;
-    grid-template-columns: repeat(5, 1fr);
-    grid-template-rows: repeat(2, 1fr);
-    gap: 10px; 
-    grid-template-rows: 1fr 2fr;
+    grid-template-columns: auto auto auto;
+    justify-content: center;  
 }
 .grid-container > div {
     background-color: #f1f1f1;
     text-align: center;
     line-height: 75px;
     font-size: 30px;
+    border: 1px solid black;
 }
 
 
