--- a/style.css
+++ b/style.css
@@ -1,16 +1,8 @@
-.grid-container {
-    display: grid;
+body {
     background-color: green;
-    padding: 20px;
-    grid-template-columns: auto auto auto;
-    justify-content: center;  
 }
-.grid-container > div {
-    background-color: #f1f1f1;
-    text-align: center;
-    line-height: 75px;
-    font-size: 30px;
-    border: 1px solid black;
+@media screen and (max-width: 768px) {
+    body {
+        background-color: blue;
+    }
 }
-
-
