--- a/style.css
+++ b/style.css
@@ -1,8 +1,4 @@
-body {
-    background-color: green;
-}
-@media screen and (max-width: 768px) {
-    body {
-        background-color: blue;
-    }
+.viewport {
+    width: 100vw;
+    height: 100vh;
 }
