feat: add calculator

--- a/style.css
+++ b/style.css
@@ -1,4 +1,23 @@
-.viewport {
-    width: 100vw;
-    height: 100vh;
+.calculator-container {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(4, 1fr);
+    padding: 20px;
+
+}
+.calculator-container > div {
+background-color: antiquewhite;
+line-height: 75px;
+font-size: 30px;
+border: 1px solid black;
+}
+body {
+    padding-top: 20px;
+}
+.span {
+    grid-column: span 4;
+    text-align: right;
+}
+.center {
+    text-align: center;
 }
