--- a/style.css
+++ b/style.css
@@ -21,3 +21,10 @@ body {
 .center {
     text-align: center;
 }
+
+@media screen and (max-width: 600px) {
+    body {
+        padding-top: 100px;
+    }
+}
+
