--- a/modulo_sass/style.css
+++ b/modulo_sass/style.css
@@ -1,16 +1,9 @@
-.navbar {
-  background-color: aquamarine;
-  padding: 10px 20px;
+.title-1 {
+  color: #3498db;
 }
-.navbar .navbar-menu {
-  display: flex;
-  justify-content: center;
-  font-size: 18px;
-  list-style-type: none;
-  gap: 5px;
-}
-.navbar .navbar-menu a:hover {
-  color: #ff0000;
+
+.text-latin {
+  font-size: 16px;
 }
 
 /*# sourceMappingURL=style.css.map */
