--- a/modulo_sass/style.scss
+++ b/modulo_sass/style.scss
@@ -1,12 +1,9 @@
-.navbar {
-    background-color: aquamarine;
-    padding: 10px 20px;
-    .navbar-menu {
-        display: flex;
-        justify-content: center;
-        font-size: 18px;
-        list-style-type: none;
-        gap: 5px;
-        a:hover {color: #ff0000;}
-    }
+$primary-color: #3498db;
+$base-font-size: 16px;
+
+.title-1 {
+    color: $primary-color;
+}
+.text-latin {
+    font-size: $base-font-size;
 }
