--- a/modulo_sass/style.css
+++ b/modulo_sass/style.css
@@ -1,9 +1,26 @@
-.last-item, .contact {
-  background-color: #e7e7e7;
+.navbar {
+  background-color: aquamarine;
+  padding: 10px 20px;
+}
+.navbar .navbar-menu {
+  display: flex;
+  justify-content: center;
+  font-size: 18px;
+  list-style-type: none;
+  gap: 5px;
+}
+.navbar .navbar-menu a:hover {
+  color: #ff0000;
 }
 
-.contact {
-  border-color: #333333;
+.container-1 {
+  width: 33.33%;
+  background-color: lightblue;
+}
+
+.container-2 {
+  width: 66.66%;
+  background-color: lightcoral;
 }
 
 /*# sourceMappingURL=style.css.map */
