feat: add color module

--- a/modulo_sass/style.css
+++ b/modulo_sass/style.css
@@ -1,26 +1,18 @@
-.navbar {
-  background-color: aquamarine;
-  padding: 10px 20px;
-}
-.navbar .navbar-menu {
-  display: flex;
-  justify-content: center;
-  font-size: 18px;
-  list-style-type: none;
-  gap: 5px;
-}
-.navbar .navbar-menu a:hover {
-  color: #ff0000;
-}
+/* Error: Undefined variable.
+ *   ,
+ * 2 |     background-color: $primary-color;
+ *   |                       ^^^^^^^^^^^^^^
+ *   '
+ *   _buttons.scss 2:23  @use
+ *   style.scss 1:1      root stylesheet */
 
-.container-1 {
-  width: 33.33%;
-  background-color: lightblue;
+body::before {
+  font-family: "Source Code Pro", "SF Mono", Monaco, Inconsolata, "Fira Mono",
+      "Droid Sans Mono", monospace, monospace;
+  white-space: pre;
+  display: block;
+  padding: 1em;
+  margin-bottom: 1em;
+  border-bottom: 2px solid black;
+  content: "Error: Undefined variable.\a   \2577 \a 2 \2502      background-color: $primary-color;\d\a   \2502                        ^^^^^^^^^^^^^^\a   \2575 \a   _buttons.scss 2:23  @use\a   style.scss 1:1      root stylesheet";
 }
-
-.container-2 {
-  width: 66.66%;
-  background-color: lightcoral;
-}
-
-/*# sourceMappingURL=style.css.map */
