--- a/modulo_sass/style.scss
+++ b/modulo_sass/style.scss
@@ -1,20 +1,5 @@
-.navbar {
-    background-color: aquamarine;
-    padding: 10px 20px;
-    .navbar-menu {
-        display: flex;
-        justify-content: center;
-        font-size: 18px;
-        list-style-type: none;
-        gap: 5px;
-        a:hover {color: #ff0000;}
-    }
-}
-.container-1 {
-    width: 33.33%;
-    background-color: lightblue;
-}
-.container-2 {
-    width: 66.66%;
-    background-color: lightcoral;
+@use '_buttons';
+
+.button-primary {
+    background-color: _buttons.$primary-color;
 }
