fix: add function

--- a/modulo_sass/style.css
+++ b/modulo_sass/style.css
@@ -1,8 +1,5 @@
-.navbar-item {
-  color: #000;
-}
-.navbar-item:hover {
-  color: #f00;
+h1 {
+  font-size: 2em;
 }
 
 /*# sourceMappingURL=style.css.map */
