--- a/modulo_sass/style.css
+++ b/modulo_sass/style.css
@@ -1,5 +1,21 @@
-h1 {
-  font-size: 2em;
+.container-1 {
+  padding: 20px;
+  margin: 10px;
+  color: white;
+  background-color: lightgray;
+}
+.container-1 p {
+  font-size: 16px;
+}
+
+.container-2 {
+  padding: 20px;
+  margin: 10px;
+  color: white;
+  background-color: #333;
+}
+.container-2 p {
+  font-size: 16px;
 }
 
 /*# sourceMappingURL=style.css.map */
