--- a/modulo_sass/style.scss
+++ b/modulo_sass/style.scss
@@ -1,7 +1,19 @@
-@function px-to-em($px, $context: 16px) {
-    @return calc($px / $context) * 1em;
+$colors: (light, dark);
+
+@for $i from 1 through 2 {
+  .container-#{$i} {
+    padding: 20px;
+    margin: 10px;
+    color: white;
+
+    @if $i == 1 {
+      background-color: lightgray;
+    } @else {
+      background-color: #333;
+    }
+    p {
+      font-size: 16px;
+    }
   }
-  h1 {
-    font-size: px-to-em(32px); // 32px -> 2em
-  }
-  
+}
+
