--- a/modulo_sass/style.css
+++ b/modulo_sass/style.css
@@ -1,21 +1,7 @@
-.container-1 {
-  padding: 20px;
-  margin: 10px;
-  color: white;
-  background-color: lightgray;
-}
-.container-1 p {
-  font-size: 16px;
+.navbar-item {
+  color: #000;
 }
 
-.container-2 {
-  padding: 20px;
-  margin: 10px;
-  color: white;
-  background-color: #333;
+.navbar-item:hover {
+  color: #f00;
 }
-.container-2 p {
-  font-size: 16px;
-}
-
-/*# sourceMappingURL=style.css.map */
